# verstream

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker.yml
src/: main.rs
