[package]
name = "verstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.171", features = ["derive"] }
anyhow = "1.0.71"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
env_logger = "0.10.0"
log = "0.4.19"
